@@ -1,3 +1,3 @@
 use test;
 
-drop table if exists checksum_test, checksum;
+drop table if exists checksum_test, checksum, fl_test;
